доисправлена файловая структура

--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -11,7 +11,7 @@
     position: relative;
 }
 
-.feynman__illustration img {
+.feynman__illustration {
     position: absolute;
     width: 867px;
     height: 637px;
