--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,12 +1,12 @@
-@import url(./description/description.css);
-@import url(./techniques/techniques.css);
-@import url(./video/video.css);
-@import url(./oakley/oakley.css);
-@import url(./feynman/feynman.css);
-@import url(./digits/digits.css);
-@import url(./khan/khan.css);
-@import url(./kaufman/kaufman.css);
-@import url(./resourses/resourses.css);
+@import url(../description/description.css);
+@import url(../techniques/techniques.css);
+@import url(../video/video.css);
+@import url(../oakley/oakley.css);
+@import url(../feynman/feynman.css);
+@import url(../digits/digits.css);
+@import url(../khan/khan.css);
+@import url(../kaufman/kaufman.css);
+@import url(../resourses/resourses.css);
 @import url(../rotation/rotation.css);
 
 .content {
