--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -5,8 +5,7 @@
     width: 648px;
     padding-top: 100px;
     text-align: center;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 0;
+    align-self: center;
     z-index: 2;
+    margin: 0;    
 }
