--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,6 +3,7 @@
 @import url(../logo/_place_footer/logo_place_footer.css);
 @import url(./__author/footer__author.css);
 
+@import url(./__column/footer__column.css);
 @import url(./__column/_content_copyright/footer__column_content_copyright.css);
 @import url(./__column/_content_info/footer__column_content_info.css);
 @import url(./__column/_content_social/footer__column_content_social.css);
