--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,4 @@
-@import url(../styles/style.css);
-@import url(../styles/normalize.css);
+@import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
 @import url(../blocks/pages/pages.css);
 @import url(../blocks/header/header.css);
