--- a/blocks/feynman/__subtitle/feynman__subtitle.css
+++ b/blocks/feynman/__subtitle/feynman__subtitle.css
@@ -2,8 +2,9 @@
     font-size: 36px;
     font-weight: 400;
     line-height: 51px;
-    margin-top: 70px;
     text-align: center;
     padding: 0;
     z-index: 2;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
 }
