--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -3,9 +3,10 @@
     font-weight: 600;
     line-height: 1.15;
     width: 648px;
-    padding-top: 100px;
     text-align: center;
     align-self: center;
     z-index: 2;
-    margin: 0;    
+    margin: 0;   
+    margin-block-start: 100px;
+    margin-block-end: 70px; 
 }
