--- a/blocks/footer/__column-heading/footer__column-heading.css
+++ b/blocks/footer/__column-heading/footer__column-heading.css
@@ -2,5 +2,7 @@
     font-weight: 600;
     font-size: 18px;
     line-height: 18px;
-    margin-bottom: 20px;    
+    padding-bottom: 20px; 
+    margin-block-start: 0em;
+    margin-block-end: 0em;
 }
