--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -1,23 +1,10 @@
-@import url(../section-title/section-title.css);
-@import url(../section-title/_theme_dark/section-title_theme_dark.css);
-
-@import url(../section-subtitle/section-subtitle.css);
-@import url(../section-subtitle/_theme_dark/section-subtitle_theme_dark.css);
-
-@import url(../table/table.css);
-@import url(../table/_theme_dark/table_theme_dark.css);
-
-@import url(./__triangle/kaufman__triangle.css);
-@import url(../../rotation/rotation.css);
-
-
 .kaufman {
     display: flex;
     flex-direction: column;
     position: relative;
     margin: 0 auto 100px;
     background-color: #1f1f1f;
-    color: #f2f2f2; 
+    color: white; 
     overflow: hidden;
 }
 
