--- a/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
+++ b/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
@@ -2,5 +2,6 @@
     line-height: 1.15;
     font-size: 24px;
     font-weight: 400;
-    margin-bottom: 68px;
+    margin-block-start: 0em;
+    margin-block-end: 68px;
 }
