--- a/blocks/khan/__quote-author/khan__quote-author.css
+++ b/blocks/khan/__quote-author/khan__quote-author.css
@@ -2,5 +2,6 @@
     line-height: 1.15;
     font-size: 24px;
     font-weight: 600;
-    margin-bottom: 10px;
+    margin-block-start: 36px;
+    margin-block-end: 10px;
 }
