--- a/blocks/khan/__quote/khan__quote.css
+++ b/blocks/khan/__quote/khan__quote.css
@@ -4,4 +4,8 @@
     font-size: 24px;
     font-weight: 400;
     margin-bottom: 36px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
 }
