--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -2,6 +2,7 @@
     display: flex;
     margin: 0 auto;
     justify-content: center;
+    text-align: center;
     width: 60%;
     font-size: 60px;
     font-weight: 600;
