--- a/blocks/table/__heading/table__heading.css
+++ b/blocks/table/__heading/table__heading.css
@@ -2,5 +2,8 @@
     font-size: 24px;
     font-weight: 600;
     line-height: 1.15; 
-    margin-bottom: 20px;   
+    margin-top: 0;
+    margin-block-start: 0em;
+    margin-block-end: 0em; 
 }
+
