--- a/blocks/table/__text/table__text.css
+++ b/blocks/table/__text/table__text.css
@@ -3,4 +3,11 @@
     font-weight: 400;
     line-height: 1.2;
     margin-bottom: 20px;
+    margin-top: 20px;
+
 }
+
+.table__text:nth-of-type(2n) {
+    margin-bottom: 0;
+}
+
