--- a/blocks/techniques/cards/__title/cards__title.css
+++ b/blocks/techniques/cards/__title/cards__title.css
@@ -4,5 +4,6 @@
     font-size: 24px;
     font-weight: 600;
     line-height: 1.15;
-    margin-bottom: 16px;
+    margin-block-start: 0em;
+    margin-block-end: 16px;
 }
