--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -1,10 +1,10 @@
-.two-columns__paragraf {
+.two-columns__paragraph {
     font-size: 24px;
     font-weight: 400;
     line-height: 34px;
     margin: 0 0 0 0;
 }
 
-.two-columns__paragraf:not(:last-child) { 
+.two-columns__paragraph:not(:last-child) { 
     margin-bottom: 30px; 
 } 
