--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -1,6 +1,6 @@
 .footer__column-link {
     text-decoration: none;
-    color: #f2f2f2;
+    color: white;
     line-height: 18px;
     font-size: 18px;
     font-weight: 400;
