--- a/blocks/table/__text/table__text.css
+++ b/blocks/table/__text/table__text.css
@@ -2,12 +2,7 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 1.2;
-    margin-bottom: 20px;
     margin-top: 20px;
+    margin-block-end: 0em;
 
 }
-
-.table__text:nth-of-type(2n) {
-    margin-bottom: 0;
-}
-
