--- a/pages/index.css
+++ b/pages/index.css
@@ -8,7 +8,7 @@
 @import url(../blocks/header/header.css);
 
 @import url(../blocks/logo/logo.css);
-@import url(../blocks/logo/_place_header/logo_place_header.css);
+@import url(../blocks/logo/_place/logo_place_header.css);
 
 @import url(../blocks/header/__title/header__title.css);
 @import url(../blocks/header/__subtitle/header__subtitle.css);
@@ -37,11 +37,11 @@
 @import url(../blocks/section-title/section-title.css);
 @import url(../blocks/section-subtitle/section-subtitle.css);
 
-@import url(../blocks/techniques/cards/cards.css);
-@import url(../blocks/techniques/cards/__description/cards__description.css);
-@import url(../blocks/techniques/cards/__image/cards__image.css);
-@import url(../blocks/techniques/cards/__item/cards__item.css);
-@import url(../blocks/techniques/cards/__title/cards__title.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__description/cards__description.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__title/cards__title.css);
 
 
 @import url(../blocks/video/video.css);
@@ -98,7 +98,7 @@
 
 @import url(../blocks/resources/resources.css);
 
-@import url(../blocks/resources/__logo_zone/resources__logo_zone.css);
+@import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
 @import url(../blocks/resources/__link/resources__link.css);
 @import url(../blocks/resources/__logo/resources__logo.css);
 
@@ -108,7 +108,7 @@
 
 @import url(../blocks/footer/__columns/footer__columns.css);
 
-@import url(../blocks/logo/_place_footer/logo_place_footer.css);
+@import url(../blocks/logo/_place/logo_place_footer.css);
 @import url(../blocks/footer/__author/footer__author.css);
 
 @import url(../blocks/footer/__column/footer__column.css);
